# flowmind_ai_demo

./: .gitignore  README.md  demo.py  docker-compose.yml  pyproject.toml
app/: db.py  db_insert_test.py  examples.py  llm.py  main.py  models.py  pricing.py  risk.py  schemas.py
